tests/cases/errors/008_unclosed_structure.nesl
<<<<<<<<<nesl
{
  nested = {
    key = R"""pv(value)pv"""
    deep = {
      item = R"""pv(never closed)pv"""
}
=========nesl